# TokenGauge

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tokengauge-core/: Cargo.toml  README.md  config.example.toml
crates/tokengauge-core/src/: lib.rs
crates/tokengauge-core/tests/: codexbar_integration.rs
crates/tokengauge-tui/: Cargo.toml
crates/tokengauge-tui/src/: main.rs
crates/tokengauge-waybar/: Cargo.toml
crates/tokengauge-waybar/src/: main.rs
scripts/: install.sh  update-codexbar.sh  update.sh  waybar-snippet.jsonc
