[workspace]
resolver = "2"
members = [
  "crates/tokengauge-core",
  "crates/tokengauge-waybar",
  "crates/tokengauge-tui"
]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
